--- a/styles/style.css
+++ b/styles/style.css
@@ -7,5 +7,11 @@
 }
 
 .card {
-  width: 700px;
+  min-width: 600px;
+  max-width: 800px;
+}
+
+.exchange {
+  min-width: 800px;
+  max-width: 1100px;
 }
